src/objects/Purchase_Order_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Cost_Code__c</fullName>
        <description>Cost code to be used for line item.</description>
        <label>Cost Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>If( 
!ISPICKVAL(VAT_Rate__c,&quot;&quot;) , 
(Unit_Days__c * Unit_Price__c) + (((Unit_Days__c * Unit_Price__c) * value(TEXT(VAT_Rate__c )))/100), 
Unit_Days__c * Unit_Price__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Item_Description__c</fullName>
        <label>Line Item Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Detail__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Id, Line_Item_Description__c ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <formula>(Unit_Days__c * Unit_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Purchase Order Line Items</relationshipLabel>
        <relationshipName>Purchase_Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_Days__c</fullName>
        <label>Unit/Days</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit /Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <formula>(((Unit_Days__c * Unit_Price__c) * value(TEXT(VAT_Rate__c )))/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Rate__c</fullName>
        <label>VAT Rate</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Purchase Order Line Item</label>
    <nameField>
        <displayFormat>POLI-{0000}</displayFormat>
        <label>Purchase Order Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NoEditByNonAdmins</fullName>
        <active>true</active>
        <description>Prevents no admin or Finance staff from updating PO in various statues</description>
        <errorConditionFormula>AND(
NOT(ISNEW())
,
OR(
ISPICKVAL(Purchase_Order__r.Status__c, &quot;Awaiting Approval&quot;), 
ISPICKVAL(Purchase_Order__r.Status__c, &quot;Paid&quot;),
ISPICKVAL(Purchase_Order__r.Status__c, &quot;Cancelled&quot;),
ISPICKVAL(Purchase_Order__r.Status__c, &quot;Do Not Pay&quot;)
)
,
AND(
$Profile.Name&lt;&gt;&quot;System Administrator&quot;,
$Profile.Name&lt;&gt;&quot;Finance User&quot;,
$Profile.Name&lt;&gt;&quot;FinancialForce Accountant&quot;,
$Profile.Name&lt;&gt;&quot;FinancialForce Cash Entry Clerk&quot;,
$Profile.Name&lt;&gt;&quot;FinancialForce Payables Clerk&quot;,
$Profile.Name&lt;&gt;&quot;FinancialForce Read Only&quot;,
$Profile.Name&lt;&gt;&quot;FinancialForce Sales Invoicing Clerk&quot;
)
)</errorConditionFormula>
        <errorMessage>You can not update PO Line Item if the PO status is Awaiting Approval OR Paid OR Cancelled OR Do Not Pay</errorMessage>
    </validationRules>
</CustomObject>